# music-synchronizer

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  storyline.md
docs/superpowers/specs/: 2026-04-24-yandex-music-obsidian-sync-design.md
electron/: README.md  package-lock.json  package.json  tsconfig.json
electron/scripts/: build.mjs  move-dmg.mjs  package-backend.mjs  prepare-icon.mjs
electron/src/: mjs-modules.d.ts
electron/src/main/: backend.ts  index.ts
electron/src/preload/: index.ts
electron/src/renderer/: global.d.ts  index.html  index.ts  shell-controller.ts  styles.css
electron/src/shared/: bridge.ts  contracts.ts
electron/src/shared/backend-schemas/: backend-error-envelope.schema.json  backend-error.schema.json  backend-success-envelope.schema.json  dashboard.schema.json  discovery.schema.json  list.schema.json  recommend.schema.json  save-config.schema.json  show-config.schema.json  sync.schema.json  top-listen.schema.json  vault.schema.json
electron/tests/: backend.test.ts  package-backend.test.ts  packaging-config.test.ts  renderer-shell.test.ts
src/music_synchronizer/: __init__.py  app.py  backend_cli.py  backend_contracts.py  cli.py  config.py  models.py  obsidian.py  sync.py  yandex_client.py
tests/: test_app_backend.py  test_backend_cli.py  test_backend_contracts.py  test_cli.py  test_config.py  test_discovery_balance.py  test_models.py  test_obsidian_sync.py  test_sync.py  test_yandex_client.py
