[project]
name = "music-synchronizer"
version = "0.1.0"
description = "Yandex Music to Obsidian synchronizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "typer>=0.16.0",
]

[project.scripts]
music-sync = "music_synchronizer.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_synchronizer"]

